# calligraplan

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yaml  .kde-ci.yml  CHANGELOG  CMakeLists.txt  TODO  kundo2_aware_xgettext.sh  snapcraft.yaml
doc/: .kateconfig  CMakeLists.txt  commonuserinterface.docbook  contexthelp.docbook  costbreakdownstructureeditor.docbook  creatingodtreporttemplates.docbook  creatingproject.docbook  definitions.docbook  guidelines.docbook  index.docbook  introduction.docbook  mainworkspace.docbook  managingresources.docbook  milestoneganttview.docbook  planintroduction.docbook  projectperformanceview.docbook  reports.docbook  reportsgeneratorview.docbook  resourceassignmentganttview.docbook  resourceassignmentview.docbook  resourceeditor.docbook  scheduleseditor.docbook  startupview.docbook  taskdependencyeditorgraphical.docbook  taskdependencyeditorlist.docbook  taskeditor.docbook  taskexecutionview.docbook  taskganttview.docbook  taskperformanceview.docbook  taskstatusview.docbook  usingtheviews.docbook  viewsandeditors.docbook  workandvacationeditor.docbook
doc/plan/: costbreakdownstructureeditor.docbook  costbreakdownview.docbook  creatingodtreporttemplates.docbook  creatingproject.docbook  guidelines.docbook  index.docbook  introduction.docbook  managingresources.docbook  planconfiguration.docbook  planintroduction.docbook  reportsgeneratorview.docbook  resourceassignmentganttview.docbook  resourceassignmentview.docbook  resourceeditor.docbook  startupview.docbook  taskdependencyeditorlist.docbook  taskexecutionview.docbook  taskperformanceview.docbook  taskstatusview.docbook  viewsandeditors.docbook  workandvacationeditor.docbook
doc/portfolio/: contenteditor.docbook  contexthelp.docbook  ganttsummaryview.docbook  index.docbook  introduction.docbook  performanceview.docbook  portfolioconfiguration.docbook  portfoliointroduction.docbook  progressview.docbook  resourceusageview.docbook  schedulingview.docbook  summaryview.docbook
src/: CMakeLists.txt  ConfigDocumentationPanel.cpp  ConfigDocumentationPanel.ui  ConfigProjectPanel.cpp  ConfigTaskModulesPanel.h  ConfigTaskModulesPanel.ui  ConfigWorkVacationPanel.cpp  KPlatoXmlLoader.cpp  KPlatoXmlLoader.h  KPtViewAdaptor.cpp  KPtViewAdaptor.h  KoIcon.h  Messages.sh  PlanMacros.h  calligraplan.rc  calligraplan_readonly.rc  calligraplansettings.kcfg  config.h.cmake  kptaboutdata.h  kptbuiltinschedulerplugin.cpp  kptbuiltinschedulerplugin.h  kptcolorsconfigpanel.cpp  kptconfig.cpp  kptconfig.h  kptconfigbehaviorpanelbase.ui  kptconfigskeleton.cpp  kptconfigskeleton.h  kptcontext.cpp  kptcontext.h  kptfactory.cpp  kptfactory.h  kptfactoryinit.cpp  kptfactoryinit.h  kptinsertfiledlg.cpp  kptinsertfiledlg.h  kptloadsharedprojectsdialog.cpp  kptloadsharedprojectsdialog.h  kptmaindocument.cpp  kptmaindocument.h  kptmycombobox_p.h  (+25 more)
src/about/: aboutpage.cpp  aboutpage.h
src/config/: ConfigDialog.cpp  ConfigDialog.h  ConfigDocumentationPanel.cpp  ConfigDocumentationPanel.h  ConfigDocumentationPanel.ui  ConfigProjectPanel.cpp  ConfigProjectPanel.h  ConfigProjectTemplatesPanel.cpp  ConfigProjectTemplatesPanel.h  ConfigTaskModulesPanel.cpp  ConfigTaskModulesPanel.h  ConfigWorkVacationPanel.cpp  ConfigWorkVacationPanel.h  kptcolorsconfigpanel.cpp  kptcolorsconfigpanel.h  kptconfigbehaviorpanel.cpp  kpttaskdefaultpanel.cpp  kpttaskdefaultpanel.h  kptworkpackageconfigpanel.cpp  kptworkpackageconfigpanel.h
src/convert/: .gitignore  CMakeLists.txt  README  build.xml
src/interfaces/: KoGenericRegistry.h
src/libs/: CMakeLists.txt
src/pics/: CMakeLists.txt
src/plan/: CMakeLists.txt  CreateReportTemplateDialog.ui  Info.plist.template  KPlatoXmlLoader.cpp  KPlatoXmlLoader.h  KPtViewAdaptor.cpp  KPtViewAdaptor.h  Messages.sh  SharedResourcesDialog.cpp  SharedResourcesDialog.h  SharedResourcesDialog.ui  calligraplan.rc  calligraplan_readonly.rc  calligraplan_shell.rc  calligraplansettings.kcfg  calligraplansettings.kcfgc  kptaboutdata.h  kptbuiltinschedulerplugin.cpp  kptbuiltinschedulerplugin.h  kptconfig.cpp  kptconfig.h  kptconfigskeleton.h  kptcontext.cpp  kptcontext.h  kptfactory.cpp  kptfactory.h  kptfactoryinit.cpp  kptinsertfiledlg.cpp  kptinsertfiledlg.h  kptloadsharedprojectsdialog.h  kptmaindocument.cpp  kptmaindocument.h  kptmycombobox_p.h  kptpart.cpp  kptpart.h  kptprintingcontrolprivate.cpp  kptprintingcontrolprivate.h  kptschedulerpluginloader.cpp  kptschedulesdocker.cpp  kptview.cpp  (+14 more)
src/portfolio/: AboutData.h  CMakeLists.txt  ChartWrapper.cpp  ChartWrapper.h  DetailsView.cpp  DetailsView.h  DocumentsSaveDialog.cpp  DocumentsSaveDialog.h  DocumentsSaveDialog.ui  GanttModel.cpp  GanttModel.h  GanttView.cpp  GanttView.h  Info.plist.template  MainDocument.cpp  MainDocument.h  MainWindow.cpp  MainWindow.h  Messages.sh  Part.cpp  Part.h  PerformanceView.cpp  PerformanceView.h  PerformanceView.ui  PlanGroupDebug.cpp  PlanGroupDebug.h  PortfolioFactory.cpp  PortfolioFactory.h  PortfolioFactoryInit.cpp  PortfolioFactoryInit.h  PortfolioModel.cpp  PortfolioModel.h  PortfolioView.cpp  PortfolioView.h  PortfolioView.ui  Portfolio_DetailsViewUi.rc  Portfolio_GanttViewUi.rc  Portfolio_PerformanceViewUi.rc  Portfolio_PortfolioViewUi.rc  Portfolio_ProgressViewUi.rc  (+45 more)
src/servicetypes/: calligraplan_filter.desktop  calligraplan_part.desktop
src/templates/: SharedResources.plant
src/tests/: CMakeLists.txt  InsertFileTester.cpp  InsertFileTester.h  InsertProjectTester.cpp  InsertProjectTester.h  WorkPackageTester.cpp  WorkPackageTester.h
src/toolbar/: CMakeLists.txt
src/welcome/: WelcomeView.cpp  WelcomeView.h  WelcomeView.ui
src/workpackage/: CMakeLists.txt  Info.plist.template  aboutdata.h  calligraplanwork.rc  commandlineparser.cpp  commandlineparser.h  debugarea.cpp  debugarea.h  factory.cpp  factory.h  factoryinit.cpp  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.calligraplanwork.appdata.xml  org.kde.calligraplanwork.desktop  packagesettings.cpp  packagesettings.h  packagesettings.ui  part.cpp  part.h  planworkpart.desktop  taskcompletiondialog.cpp  taskcompletiondialog.h  view.cpp  view.h  (+7 more)
(+1736 files in other folders)
